@@ -45,6 +45,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #20368: The null character now correctly passed from Tcl to Python.
+  Improved error handling in variables-related commands.
+
 - Issue #20435: Fix _pyio.StringIO.getvalue() to take into account newline
   translation settings.
 
